--- a/.github/workflows/build-container-image.yml
+++ b/.github/workflows/build-container-image.yml
@@ -30,6 +30,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - uses: docker/setup-qemu-action@v3
         if: contains(inputs.platforms, 'linux/arm64') && !inputs.use_native_arm64_builder
